fix: gender input spacing

--- a/client/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -125,7 +125,7 @@
     .locationInput {
         grid-column: 1 / 3;
         grid-row: 11 / 12;
-        width: 136px;
+        width: 135px;
         height: 40px;
         margin: 5px 0;
         border-radius: 5px;
@@ -155,7 +155,7 @@
         border: 1px solid #96807A;
         border-radius: 5px;
         background-color: #F7EDE1;
-        margin-left: 8px;
+        margin-left: 7px;
     }
     
     .skintypeLabel {
